--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-</head>
+  </head>
   <head>
     <meta charset="utf-8" />
     <meta
@@ -37,16 +36,23 @@
       type="text/css"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../css/stylesheet.css" type="text/css" rel="stylesheet" th:href="@{../css/stylesheet.css}" />
+    <link
+      href="../css/stylesheet.css"
+      type="text/css"
+      rel="stylesheet"
+      th:href="@{../css/stylesheet.css}"
+    />
   </head>
   <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
           <!--Navbar logo-->
-          <img src="../static/images/aficionodo-logo.png" th:src="@{/images/aficionodo-logo.png}">
+          <img
+            src="../static/images/aficionodo-logo.png"
+            th:src="@{/images/aficionodo-logo.png}"
+          />
         </a>
         <button
           class="navbar-toggler navbar-toggler-right"
@@ -66,7 +72,9 @@
               <!-- <a class="nav-link js-scroll-trigger" href="src/main/resources/templates/about.html">About Us</a> -->
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/contact">Contact Us</a>
+              <a class="nav-link js-scroll-trigger" href="/contact"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </div>
@@ -93,10 +101,14 @@
         <div class="masthead-heading text-uppercase">
           This Isn't Your Fathers Suit
         </div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/about">Tell Me More</a>
+        <a
+          class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
+          href="/about"
+          >Tell Me More</a
+        >
       </div>
     </header>
-      
+
     <!-- (Collections) Portfolio Grid-->
     <section class="page-section bg-light" id="portfolio">
       <div class="container">
@@ -110,11 +122,7 @@
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="portfolio-item">
               <!--Collection 1-->
-              <a
-                class="portfolio-link"
-                data-toggle="modal"
-                href="/product"
-              >
+              <a class="portfolio-link" data-toggle="modal" href="/product">
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
                     <i class="fas fa-plus fa-3x"></i>
@@ -137,11 +145,7 @@
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="portfolio-item">
               <!--Collection 2-->
-              <a
-                class="portfolio-link"
-                data-toggle="modal"
-                href="/collection"
-              >
+              <a class="portfolio-link" data-toggle="modal" href="/collection">
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
                     <i class="fas fa-plus fa-3x"></i>
@@ -164,11 +168,7 @@
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="portfolio-item">
               <!--Collection 3-->
-              <a
-                class="portfolio-link"
-                data-toggle="modal"
-                href="/collection"
-              >
+              <a class="portfolio-link" data-toggle="modal" href="/collection">
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
                     <i class="fas fa-plus fa-3x"></i>
@@ -191,11 +191,7 @@
           <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
             <div class="portfolio-item">
               <!--Collection 4-->
-              <a
-                class="portfolio-link"
-                data-toggle="modal"
-                href="/collection"
-              >
+              <a class="portfolio-link" data-toggle="modal" href="/collection">
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
                     <i class="fas fa-plus fa-3x"></i>
@@ -218,11 +214,7 @@
           <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
             <div class="portfolio-item">
               <!--Collection 5-->
-              <a
-                class="portfolio-link"
-                data-toggle="modal"
-                href="/collection"
-              >
+              <a class="portfolio-link" data-toggle="modal" href="/collection">
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
                     <i class="fas fa-plus fa-3x"></i>
@@ -245,11 +237,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
               <!--Collection 6-->
-              <a
-                class="portfolio-link"
-                data-toggle="modal"
-                href="collection"
-              >
+              <a class="portfolio-link" data-toggle="modal" href="collection">
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
                     <i class="fas fa-plus fa-3x"></i>
@@ -275,21 +263,27 @@
     <!-- Footer-->
     <footer class="footer py-4">
       <div class="container">
-          <div class="row align-items-center">
-              <div class="col-lg-4 text-lg-left">Copyright © Aficionado 2020</div>
-              <div class="col-lg-4 my-3 my-lg-0">
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-              </div>
-              <div class="col-lg-4 text-lg-right">
-                  <a class="mr-3" href="#!">Privacy Policy</a>
-                  <a href="#!">Terms of Use</a>
-              </div>
+        <div class="row align-items-center">
+          <div class="col-lg-4 text-lg-left">Copyright © Aficionado 2020</div>
+          <div class="col-lg-4 my-3 my-lg-0">
+            <a class="btn btn-dark btn-social mx-2" href="#!"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a class="btn btn-dark btn-social mx-2" href="#!"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a class="btn btn-dark btn-social mx-2" href="#!"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
           </div>
+          <div class="col-lg-4 text-lg-right">
+            <a class="mr-3" href="#!">Privacy Policy</a>
+            <a href="#!">Terms of Use</a>
+          </div>
+        </div>
       </div>
-  </footer>
-        <!-- Bootstrap core JS-->
+    </footer>
+    <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
